fixed spacing

--- a/style.css
+++ b/style.css
@@ -149,9 +149,6 @@ html {
     font-style: italic;
 }
 
-.itemDisplay{
-	font-size: 25pt;
-}
 
 .newInput {
     font-family: 'Josefin Sans', Helvetica, sans;
@@ -172,6 +169,7 @@ html {
 
 #itemList {
     padding: 0;
+    font-size: 25pt;
 }
 
 #newItemPossiblePointsInput, #newItemPointsInput {
